--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "canvas": "^2.11.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "operations-research": "^1.0.1"
+    "multer": "^1.4.5-lts.1",
+    "operations-research": "^1.0.1",
+    "pdfjs-dist": "^2.9.359",
+    "tesseract.js": "^5.0.4"
   }
 }
