--- a/server/package.json
+++ b/server/package.json
@@ -15,8 +15,9 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
+    "node-summary": "^1.1.0",
     "operations-research": "^1.0.1",
-    "pdfjs-dist": "^2.9.359",
+    "pdfjs-dist": "^3.11.174",
     "tesseract.js": "^5.0.4"
   }
 }
