--- a/server/package.json
+++ b/server/package.json
@@ -25,5 +25,8 @@
     "operations-research": "^1.0.1",
     "pdfjs-dist": "^3.11.174",
     "tesseract.js": "^5.0.4"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
